# internal/api/api.go
@@ -12,6 +12,7 @@ type Server interface {
 	Register(ctx context.Context, user *users.User) (*users.User, error)
 	Login(ctx context.Context, email, password string) (*users.User, error)
 	ReadUserByEmail(ctx context.Context, email string) (*users.User, error)
+	ChangePassword(ctx context.Context, email, oldPassword, newPassword string) error
 	RegisterNote(ctx context.Context, un *usernotes.Note) (*usernotes.Note, error)
 	ReadUserNote(ctx context.Context, userID string, noteID string) (*usernotes.Note, error)
 }
